hphp/test/zend/bad/Zend/tests/gc_001.php
<?php
gc_disable();
var_dump(gc_enabled());
gc_enable();
var_dump(gc_enabled());
?>